typescript/checker/tests/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts.stderr
error: Expected LBrace, got Some(Word(implements))
 --> $DIR/tests/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts:1:13
  |
1 | interface I implements A {
  |             ^^^^^^^^^^

